# pqgext

./: CHANGELOG  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
pqgext/: _PiePlotWidget.py  _TimeDistWidget.py  __init__.py
pqgext/_settings/: __init__.py  settings.py
pqgext/_style/: __init__.py  style.py
