[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[project]
name = "pqgext"
version = "0.0.2"
description = "Classes and functions missing in pyqtgraph library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["threading", "Python", "PyQt", "loading", "animation"]
authors = [
    {name = "Stepan Marousek"}
]
classifiers = [
    "Development Status :: 1",
    "Programming Language :: Python"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
repository = "https://github.com/1000101cz/pqgext"

[tool.setuptools.packages]
find = {}

[options.packages.find]